# splisp

./: '  .gitignore  CMakeLists.txt  README.md  TODO.md  closures.md  justfile
docs/: local_frame_ops.md
lib/: CMakeLists.txt
lib/splisp_lib/: :w  CMakeLists.txt
lib/splisp_lib/include/: ast.hpp  hello.hpp  lexer.hpp  parser.hpp
lib/splisp_lib/include/backend/generator/: generator.hpp
lib/splisp_lib/include/backend/isa/: isa.hpp
lib/splisp_lib/include/backend/vm/: stack.hpp
lib/splisp_lib/include/frontend/: ast.hpp  core.hpp  lexer.hpp  parser.hpp  scoper.hpp
lib/splisp_lib/include/isa/: isa.hpp
lib/splisp_lib/include/vm/: stack.hpp
lib/splisp_lib/src/: ast.cpp  hello.cpp  lexer.cpp  parser.cpp
lib/splisp_lib/src/backend/generator/: generator.cpp
lib/splisp_lib/src/backend/isa/: isa.cpp
lib/splisp_lib/src/backend/vm/: stack.cpp
lib/splisp_lib/src/frontend/: ast.cpp  core.cpp  core.hpp  lexer.cpp  parser.cpp  scoper.cpp
lib/splisp_lib/src/isa/: isa.cpp
lib/splisp_lib/src/vm/: stack.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  generator_tests.cpp  lexer_parser_tests.cpp  lowerer_tests.cpp  pipeline_tests.cpp  scoper_tests.cpp  vm_program_tests.cpp  vm_stack_tests.cpp
