cmake_minimum_required(VERSION 3.23)

project(
  splisp
  VERSION 0.1.0
  LANGUAGES CXX
)

include(CTest)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)


add_subdirectory(lib)

add_subdirectory(src)

if(BUILD_TESTING)
  add_subdirectory(tests)
endif()
